# mwutils

./: CMakeLists.txt  LICENSE.txt  README.md
include/mwutils/: attributes.hpp  helpers.hpp  mwutils.hpp  structures.hpp  types.hpp
src/: mwutils.cpp  random.cpp
